--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "mn82:8.7": "Genieße Sinnenfreuden und freue dich am Verdienstschaffen! ",
   "mn82:8.8": "Wir erlauben dir nicht, fortzuziehen. ",
   "mn82:8.9": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
-  "mn82:8.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ "
+  "mn82:8.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
+  "mn82:8.11": "Auf diese Worte schwieg Raṭṭhapāla. "
 }
