--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "mn82:8.11": "Auf diese Worte schwieg Raṭṭhapāla. ",
   "mn82:8.12": "Zum zweiten ",
   "mn82:8.14": "und zum dritten Mal wiederholten Raṭṭhapāla Eltern ihr Drängen, ",
-  "mn82:9.1": "und jedesmal schwieg Raṭṭhapāla. Raṭṭhapālas Eltern gingen zu seinen Freunden. Sie schilderten ihnen die Lage und baten um ihre Hilfe. "
+  "mn82:9.1": "und jedesmal schwieg Raṭṭhapāla. Raṭṭhapālas Eltern gingen zu seinen Freunden. Sie schilderten ihnen die Lage und baten um ihre Hilfe. ",
+  "mn82:10.1": "Da kamen Raṭṭhapālas Freunde zu ihm und sagten: "
 }
