--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "mn82:10.3": "Du weißt nichts vom Leiden. ",
   "mn82:10.4": "Wenn du stirbst, werden deine Eltern dich gegen ihren Willen verlieren. ",
   "mn82:10.5": "Wie können sie dir daher erlauben, fortzuziehen, solange du noch lebst? ",
-  "mn82:10.6": "Steh auf, Raṭṭhapāla! Iss und trink und vergnüge dich! "
+  "mn82:10.6": "Steh auf, Raṭṭhapāla! Iss und trink und vergnüge dich! ",
+  "mn82:10.7": "Genieße Sinnenfreuden und freue dich am Verdienstschaffen! "
 }
