--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn82:10.7": "Genieße Sinnenfreuden und freue dich am Verdienstschaffen! ",
   "mn82:10.8": "Deine Eltern erlauben dir nicht, fortzuziehen. ",
   "mn82:10.9": "Wenn du stirbst, werden sie dich gegen ihren Willen verlieren. ",
-  "mn82:10.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ "
+  "mn82:10.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
+  "mn82:10.11": "Auf diese Worte schwieg Raṭṭhapāla. "
 }
