--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn82:10.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
   "mn82:10.11": "Auf diese Worte schwieg Raṭṭhapāla. ",
   "mn82:10.12": "Zum zweiten ",
-  "mn82:10.13": "und zum dritten Mal wiederholten Raṭṭhapālas Freunde ihr Drängen, "
+  "mn82:10.13": "und zum dritten Mal wiederholten Raṭṭhapālas Freunde ihr Drängen, ",
+  "mn82:10.19": "und jedesmal schwieg Raṭṭhapāla. "
 }
