--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "mn82:11.1": "Da gingen Raṭṭhapālas Freunde zu seinen Eltern und sagten: ",
   "mn82:11.2": "„Mutter, Vater, Raṭṭhapāla liegt da auf dem blanken Boden und sagt: ",
   "mn82:11.3": "‚Entweder sterbe ich eben hier oder ich ziehe fort.‘ ",
-  "mn82:11.4": "Wenn ihr ihm nicht erlaubt, fortzuziehen, wird er eben da sterben. "
+  "mn82:11.4": "Wenn ihr ihm nicht erlaubt, fortzuziehen, wird er eben da sterben. ",
+  "mn82:11.5": "Aber wenn ihr ihm erlaubt, fortzuziehen, werdet ihr ihn später wieder sehen. "
 }
