--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -77,5 +77,6 @@
   "mn82:11.6": "Und wenn er das hauslose Leben nicht genießt, wo soll er sonst hingehen? Er wird eben hierher zurückkommen. ",
   "mn82:11.7": "Bitte gebt Raṭṭhapāla die Erlaubnis zum Fortziehen.“ ",
   "mn82:11.8": "„Dann, ihr Lieben, geben wir Raṭṭhapāla die Erlaubnis zum Fortziehen. ",
-  "mn82:11.9": "Aber wenn er fortgezogen ist, muss er seine Eltern besuchen.“ "
+  "mn82:11.9": "Aber wenn er fortgezogen ist, muss er seine Eltern besuchen.“ ",
+  "mn82:11.10": "Da gingen Raṭṭhapālas Freunde zu ihm und sagten: "
 }
