--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "mn82:11.11": "„Steh auf, Raṭṭhapāla! Deine Eltern haben dir die Erlaubnis gegeben, aus dem Haus fortzuziehen ins hauslose Leben. ",
   "mn82:11.12": "Aber wenn du fortgezogen bist, musst du deine Eltern besuchen.“ ",
   "mn82:12.1": "Raṭṭhapāla erhob sich und kam wieder zu Kräften. Dann ging er zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "mn82:12.2": "„Herr, ich habe die Erlaubnis deiner Eltern, um aus dem Haus fortzuziehen ins hauslose Leben. "
+  "mn82:12.2": "„Herr, ich habe die Erlaubnis deiner Eltern, um aus dem Haus fortzuziehen ins hauslose Leben. ",
+  "mn82:12.3": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ "
 }
