--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -84,5 +84,6 @@
   "mn82:12.1": "Raṭṭhapāla erhob sich und kam wieder zu Kräften. Dann ging er zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "mn82:12.2": "„Herr, ich habe die Erlaubnis deiner Eltern, um aus dem Haus fortzuziehen ins hauslose Leben. ",
   "mn82:12.3": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ ",
-  "mn82:13.1": "Und Raṭṭhapāla erhielt vor dem Buddha die Weihe des Fortziehens, die Ordination. "
+  "mn82:13.1": "Und Raṭṭhapāla erhielt vor dem Buddha die Weihe des Fortziehens, die Ordination. ",
+  "mn82:13.2": "Nicht lange nach der Ordination des Ehrwürdigen Raṭṭhapāla, einen halben Monat später, brach der Buddha, nachdem er so lange in Thullakoṭṭhita geblieben war, wie es ihm gefiel, nach Sāvatthī auf. "
 }
