--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -8,5 +8,6 @@
   "mn5:1.5": "« Vénérable », répondirent-ils. ",
   "mn5:1.6": "Sāriputta déclara ceci : ",
   "mn5:2.1": "« Monastiques, il y a ces quatre personnes dans le monde. ",
-  "mn5:2.2": "Lesquelles ? "
+  "mn5:2.2": "Lesquelles ? ",
+  "mn5:2.3": "Une personne avec une souillure qui ne comprend pas véritablement : ‹ il y a une souillure en moi. › "
 }
