--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -10,5 +10,5 @@
   "mn5:2.1": "« Monastiques, il y a ces quatre personnes dans le monde. ",
   "mn5:2.2": "Lesquelles ? ",
   "mn5:2.3": "Une personne avec une souillure qui ne comprend pas véritablement : ‹ il y a une souillure en moi. › ",
-  "mn5:2.4": "Mais une autre personne avec une souillure qui comprend véritablement : ‹ il y a une souillure en moi. › "
+  "mn5:2.4": "Mais, une autre personne avec une souillure qui comprend véritablement : ‹ il y a une souillure en moi. › "
 }
