--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -16,5 +16,6 @@
   "mn5:2.7": "Dans ce cas, parmi les deux personnes avec une souillure, celle qui ne comprend pas est considérée comme pire, ",
   "mn5:2.8": "tandis que celle qui comprend est considérée comme meilleure. ",
   "mn5:2.9": "Et parmi les deux personnes sans souillure, celle qui ne comprend pas est considérée comme pire, ",
-  "mn5:2.10": "tandis que celle qui comprend est considérée comme meilleure. » "
+  "mn5:2.10": "tandis que celle qui comprend est considérée comme meilleure. » ",
+  "mn5:3.1": "Lorsqu’il eut dit cela, le Vénérable Mahāmoggallāna lui dit : "
 }
