--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -18,5 +18,6 @@
   "mn5:2.9": "Et parmi les deux personnes sans souillure, celle qui ne comprend pas est considérée comme pire, ",
   "mn5:2.10": "tandis que celle qui comprend est considérée comme meilleure. » ",
   "mn5:3.1": "Lorsqu’il eut dit cela, le Vénérable Mahāmoggallāna lui dit : ",
-  "mn5:3.2": "« Quelle est la cause, Vénérable Sāriputta, quelle est la raison pour laquelle, parmi les deux personnes avec une souillure, l’une est considérée comme pire et l’autre meilleure ? "
+  "mn5:3.2": "« Quelle est la cause, Vénérable Sāriputta, quelle est la raison pour laquelle, parmi les deux personnes avec une souillure, l’une est considérée comme pire et l’autre meilleure ? ",
+  "mn5:3.3": "Et quelle est la cause, quelle est la raison pour laquelle, parmi les deux personnes sans souillure, l’une est considérée comme pire et l’autre meilleure ? » "
 }
