--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -23,5 +23,6 @@
   "mn5:4.1": "« Vénérables, considérez le cas de la personne qui a une souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’elle ne génère pas d’enthousiasme, ne fasse pas d’effort, ni ne stimule son énergie pour abandonner cette souillure. ",
   "mn5:4.2": "Et elle mourra avec l’avidité, la haine et l’illusion, entachée, avec un esprit corrompu. ",
   "mn5:4.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
-  "mn5:4.4": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. "
+  "mn5:4.4": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
+  "mn5:4.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas encore plus sale et taché ? » "
 }
