--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -5,7 +5,7 @@
   "mn5:1.2": "À une époque, le Bouddha séjournait près de Sāvatthī dans la Forêt de Jeta, au monastère d’Anāthapiṇḍika. ",
   "mn5:1.3": "Là, Sāriputta s’adressa aux monastiques : ",
   "mn5:1.4": "« Révérends, monastiques ! » ",
-  "mn5:1.5": "« Vénérable », répondirent-ils. ",
+  "mn5:1.5": "« Révérend », répondirent-ils. ",
   "mn5:1.6": "Sāriputta déclara ceci : ",
   "mn5:2.1": "« Monastiques, il y a ces quatre personnes dans le monde. ",
   "mn5:2.2": "Lesquelles ? ",
