--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -26,5 +26,6 @@
   "mn5:4.4": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
   "mn5:4.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas encore plus sale et taché ? » ",
   "mn5:4.6": "« Oui, révérend. » ",
-  "mn5:4.7": "« De la même manière, considérez le cas de la personne qui a une souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’… "
+  "mn5:4.7": "« De la même manière, considérez le cas de la personne qui a une souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’… ",
+  "mn5:4.8": "elle meure avec un esprit corrompu. "
 }
