--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -38,5 +38,6 @@
   "mn5:5.8": "elle meure avec un esprit pur. ",
   "mn5:6.1": "Considérez le cas de la personne qui n’a pas de souillure, mais ne le comprend pas. Vous pouvez vous attendre à ce qu’elle se concentre sur la caractéristique de la beauté, et à cause de cela, la convoitise infectera son esprit. ",
   "mn5:6.2": "Et elle mourra avec avidité, haine et illusion, entachée, avec un esprit corrompu. ",
-  "mn5:6.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. "
+  "mn5:6.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
+  "mn5:6.4": "Et que les propriétaires ne l’utilisent pas ou ne le nettoient pas, mais le gardent dans un endroit sale. "
 }
