--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "an4.37:4.2": "Da denkt ein Mönch beim Essen über seine Nahrung gründlich nach: ",
   "an4.37:4.3": "‚Nicht zum Spaß, zum Schwelgen, zur Zier und zum Schmuck, sondern nur, um diesen Körper zu erhalten, um Schaden abzuwenden und das geistliche Leben zu fördern; damit ich altes Unbehagen beende und neues nicht entstehen lasse und ohne Tadel und unbeschwert lebe.‘ ",
   "an4.37:4.4": "So hält ein Mönch Maß beim Essen. ",
-  "an4.37:5.1": "Und wie weiht sich eine Nonne dem Wachsein? ",
+  "an4.37:5.1": "Und wie weiht sich ein Mönch dem Wachsein? ",
   "an4.37:5.2": "Da meditiert eine Nonne am Tag im Gehen und im Sitzen und läutert den Geist von Hemmnissen. ",
   "an4.37:5.3": "Während der ersten Nachtwache meditiert sie im Gehen und im Sitzen und läutert den Geist von Hemmnissen. ",
   "an4.37:5.4": "Während der mittleren Nachtwache legt sie sich in der Haltung des Löwen nieder – auf die rechte Seite, einen Fuß auf den anderen gelegt – achtsam und der Situation bewusst, den Geist auf die Zeit des Aufstehens gerichtet. ",
