--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "an4.37:5.3": "Während der ersten Nachtwache meditiert er im Gehen und im Sitzen und läutert den Geist von Hemmnissen. ",
   "an4.37:5.4": "Während der mittleren Nachtwache legt er sich in der Haltung des Löwen nieder – auf die rechte Seite, einen Fuß auf den anderen gelegt – achtsam und der Situation bewusst, den Geist auf die Zeit des Aufstehens gerichtet. ",
   "an4.37:5.5": "Während der letzten Nachtwache steht er auf und meditiert im Gehen und im Sitzen und läutert den Geist von Hemmnissen. ",
-  "an4.37:5.6": "So weiht sich eine Nonne dem Wachsein. ",
+  "an4.37:5.6": "So weiht sich ein Mönch dem Wachsein. ",
   "an4.37:5.7": "Ein Mönch oder eine Nonne mit diesen vier Eigenschaften kann nicht verkümmern und ist dem Erlöschen nahegekommen. ",
   "an4.37:6.1": "Feststehend in der Sittlichkeit, ",
   "an4.37:6.2": "die Sinne beherrscht, ",
