--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "an4.37:7.2": "unermüdlich bei Tag und Nacht ",
   "an4.37:7.3": "und entwickelt taugliche Eigenschaften, ",
   "an4.37:7.4": "um ein Schutzgebiet zu finden. ",
-  "an4.37:8.1": "Eine Nonne, die Beflissenheit liebt ",
+  "an4.37:8.1": "Ein Mönch, der Beflissenheit liebt ",
   "an4.37:8.2": "und die Gefahr in der Nachlässigkeit sieht, ",
   "an4.37:8.3": "kann nicht verkümmern ",
   "an4.37:8.4": "und ist dem Erlöschen nahegekommen.“ "
