--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -136,5 +136,6 @@
   "mn82:21.1": "Als dann die Nacht vorüber war, ließ Raṭṭhapālas Vater in seiner eigenen Wohnung köstliche frische und gekochte Speisen zubereiten und benachrichtigte Raṭṭhapāla über die Zeit: ",
   "mn82:21.2": "„Es ist Zeit, Herr, das Essen ist fertig.“ ",
   "mn82:22.1": "Da kleidete Raṭṭhapāla sich am Morgen an, nahm Schale und Robe, ging zum Haus seines Vaters und setzte sich auf den ausgebreiteten Sitz. Raṭṭhapālas Vater enthüllte den Haufen mit Goldmünzen und ungemünztem Gold und sagte zu ihm: ",
-  "mn82:22.2": "„Lieber Raṭṭhapāla, das ist dein mütterliches Vermögen. Es gibt noch ein väterliches Vermögen sowie ein Vermögen von den Vorfahren. "
+  "mn82:22.2": "„Lieber Raṭṭhapāla, das ist dein mütterliches Vermögen. Es gibt noch ein väterliches Vermögen sowie ein Vermögen von den Vorfahren. ",
+  "mn82:22.3": "Du kannst sowohl dein Vermögen genießen als auch Verdienst schaffen. "
 }
