--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -139,5 +139,6 @@
   "mn82:22.2": "„Lieber Raṭṭhapāla, das ist dein mütterliches Vermögen. Es gibt noch ein väterliches Vermögen sowie ein Vermögen von den Vorfahren. ",
   "mn82:22.3": "Du kannst sowohl dein Vermögen genießen als auch Verdienst schaffen. ",
   "mn82:22.4": "Komm, wende dich wieder einem geringeren Leben zu, genieße das Vermögen und schaffe Verdienst!“ ",
-  "mn82:22.5": "„Wenn du auf meinen Rat hören würdest, würdest du diesen Haufen Gold auf einen Karren laden und wegfahren lassen, um ihn in der Mitte des Ganges zu versenken. "
+  "mn82:22.5": "„Wenn du auf meinen Rat hören würdest, würdest du diesen Haufen Gold auf einen Karren laden und wegfahren lassen, um ihn in der Mitte des Ganges zu versenken. ",
+  "mn82:22.6": "Und warum? "
 }
