--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -141,5 +141,6 @@
   "mn82:22.4": "Komm, wende dich wieder einem geringeren Leben zu, genieße das Vermögen und schaffe Verdienst!“ ",
   "mn82:22.5": "„Wenn du auf meinen Rat hören würdest, würdest du diesen Haufen Gold auf einen Karren laden und wegfahren lassen, um ihn in der Mitte des Ganges zu versenken. ",
   "mn82:22.6": "Und warum? ",
-  "mn82:22.7": "Weil er dir nichts als Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis bringen wird.“ "
+  "mn82:22.7": "Weil er dir nichts als Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis bringen wird.“ ",
+  "mn82:23.1": "Dann umschlangen Raṭṭhapālas frühere Frauen je einen seiner Füße und sagten: "
 }
