--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -395,7 +395,7 @@
   "dn16:2.16.1": "Da stieß Ambapālī mit diesen Licchaver Jugendlichen zusammen, Achse an Achse, Rad an Rad, Joch an Joch. ",
   "dn16:2.16.2": "Die Licchaver sagten zu ihr: ",
   "dn16:2.16.3": "„Ambapālī, du Schlampe, was tust du, dass du mit uns zusammenstößt, Achse an Achse, Rad an Rad, Joch an Joch?“ ",
-  "dn16:2.16.4": "„Nun, junge Herren, es ist, weil ich den Buddha zusammen mit dem Saṅgha der Mönche und Nonnen für die morgige Mahlzeit eingeladen habe.“ ",
+  "dn16:2.16.4": "„Nun, Hausherren, es ist, weil ich den Buddha zusammen mit dem Saṅgha der Mönche und Nonnen für die morgige Mahlzeit eingeladen habe.“ ",
   "dn16:2.16.5": "„Du Schlampe, gib uns diese Mahlzeit für Hunderttausend!“ ",
   "dn16:2.16.6": "„Junge Herren, selbst wenn ihr mir ganz Vesālī mit seinen Provinzen geben wolltet, würde ich euch doch diese Mahlzeit nicht geben.“ ",
   "dn16:2.16.7": "Da schnippten die Licchaver mit den Fingern und sagten: ",
