--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -397,7 +397,7 @@
   "dn16:2.16.3": "„Ambapālī, du Schlampe, was tust du, dass du mit uns zusammenstößt, Achse an Achse, Rad an Rad, Joch an Joch?“ ",
   "dn16:2.16.4": "„Nun, Hausherren, es ist, weil ich den Buddha zusammen mit dem Saṅgha der Mönche und Nonnen für die morgige Mahlzeit eingeladen habe.“ ",
   "dn16:2.16.5": "„Du Schlampe, gib uns diese Mahlzeit für Hunderttausend!“ ",
-  "dn16:2.16.6": "„Junge Herren, selbst wenn ihr mir ganz Vesālī mit seinen Provinzen geben wolltet, würde ich euch doch diese Mahlzeit nicht geben.“ ",
+  "dn16:2.16.6": "„Hausherren, selbst wenn ihr mir ganz Vesālī mit seinen Provinzen geben wolltet, würde ich euch doch diese Mahlzeit nicht geben.“ ",
   "dn16:2.16.7": "Da schnippten die Licchaver mit den Fingern und sagten: ",
   "dn16:2.16.8": "„Wir haben gegen die Mangotante den Kürzeren gezogen! Wir haben gegen die Mangotante den Kürzeren gezogen!“ ",
   "dn16:2.16.9": "Dann fuhren sie weiter zu Ambapālīs Mangowäldchen. ",
