--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -143,5 +143,6 @@
   "mn82:22.6": "Und warum? ",
   "mn82:22.7": "Weil er dir nichts als Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis bringen wird.“ ",
   "mn82:23.1": "Dann umschlangen Raṭṭhapālas frühere Frauen je einen seiner Füße und sagten: ",
-  "mn82:23.2": "„Wie sind sie, Hausherr, die Nymphen, um derentwillen du das geistliche Leben führst?“ "
+  "mn82:23.2": "„Wie sind sie, Hausherr, die Nymphen, um derentwillen du das geistliche Leben führst?“ ",
+  "mn82:23.3": "„Schwestern, ich führe das geistliche Leben nicht um Nymphen willen.“ "
 }
