--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an10.172:2.6": "Wer kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären?“ ",
   "an10.172:3.1": "Dann überlegten sie: ",
   "an10.172:3.2": "„Dieser Ehrwürdige Mahākaccāna wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
-  "an10.172:3.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
+  "an10.172:3.3": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "an10.172:3.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen. ",
   "an10.172:3.5": "So wie er uns antwortet, wollen wir es behalten.“ ",
   "an10.172:4.1": "Da gingen diese Mönche und Nonnen zu Mahākaccāna und tauschten Willkommensgrüße mit ihm aus. ",
