--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -80,7 +80,7 @@
   "an10.172:21.2": "rechte Ansicht ist ein guter Grundsatz. ",
   "an10.172:21.3": "Die vielen schlechten, untauglichen Eigenschaften, die aufgrund von falscher Ansicht entstehen, sind schlechte Ergebnisse, ",
   "an10.172:21.4": "und die vielen tauglichen Eigenschaften, die aufgrund von rechter Ansicht vollständig entwickelt werden, sind gute Ergebnisse. ",
-  "an10.172:22.1": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
+  "an10.172:22.1": "Der Buddha hat diesen kurzen Merksatz zum Aufsagen vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
   "an10.172:22.2": "‚Ihr solltet schlechte Grundsätze und gute Grundsätze kennen … ",
   "an10.172:22.3": "und im Einklang damit üben.‘ ",
   "an10.172:22.4": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
